<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="122.06dp"
        android:layout_marginBottom="213dp"
        android:contentDescription="@string/activity_login_logo_desc"
        android:src="@drawable/my_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layout_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:hint="@string/input_name_hint"
        app:boxCornerRadiusBottomEnd="36dp"
        app:boxCornerRadiusBottomStart="36dp"
        app:boxCornerRadiusTopEnd="36dp"
        app:boxCornerRadiusTopStart="36dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.086">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layout_email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_email_hint"
        app:boxCornerRadiusBottomEnd="36dp"
        app:boxCornerRadiusBottomStart="36dp"
        app:boxCornerRadiusTopEnd="36dp"
        app:boxCornerRadiusTopStart="36dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_name"
        app:layout_constraintVertical_bias="0.023">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layout_password"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_password_hint"
        app:boxCornerRadiusBottomEnd="36dp"
        app:boxCornerRadiusBottomStart="36dp"
        app:boxCornerRadiusTopEnd="36dp"
        app:boxCornerRadiusTopStart="36dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_email"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layout_address"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_address_hint"
        app:boxCornerRadiusBottomEnd="36dp"
        app:boxCornerRadiusBottomStart="36dp"
        app:boxCornerRadiusTopEnd="36dp"
        app:boxCornerRadiusTopStart="36dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_password"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_layout_phone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone_hint"
        app:boxCornerRadiusBottomEnd="36dp"
        app:boxCornerRadiusBottomStart="36dp"
        app:boxCornerRadiusTopEnd="36dp"
        app:boxCornerRadiusTopStart="36dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_address"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/activity_register_register_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_layout_phone"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/register_layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_login"
        app:layout_constraintVertical_bias="0.452">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_login_label" />

        <Button
            android:id="@+id/register_btn_register"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:padding="0dp"
            android:text="@string/activity_register_login_btn"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>